--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,4 +2,4 @@
 
 <%= link_to "Back", products_path %> | <%= link_to "Edit", edit_product_path(@product.id) %>
 
-<p><%= @product.name %>, <%= @product.description %> <%= number_to_currency(@product.price_in_cents / 100) %> </p>
+<p><%= @product.name %>, <%= @product.description %>, $<%= @product.formatted_price %> </p>
