Working non-AJAX search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 	<% if flash[:notice] %>
-		<p id="alert"<%= flash[:alert] %>></p>
+		<p id="alert"> <%= flash[:notice] %> </p>
 	<% end %>
 	<% if flash[:alert] %>
 		<p id="alert"><%= flash[:alert] %></p>	
