--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,16 @@
 <h1>Products#index</h1>
 
-
-
-<ul>
-
-<% @products.each do |product| %>
-
-<li><a href="/products/<%= product.id %>"><%= product.name%>, <%= product.description %> <%= number_to_currency(product.formatted_price, delimeter: ",") %></a></li>
-
+<%= form_tag products_path, method: :get, authentication: false, id: 'search-form' do %>
+	<%= text_field_tag :search, params[:search] %>
+	<%= submit_tag "Search" %>
 <% end %>
 
-</ul>
+
+<div id="products">
+	<ul>
+	<%= render @products %>
+	</ul>
+</div>
 
 
 <%= link_to "Add a new product", new_product_path(@product) %>
