--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= link_to "Back", products_path %> | <%= link_to "Edit", edit_product_path(@product.id) %>
 
-<p><%= @product.name %>, <%= @product.description %>, $<%= @product.formatted_price %> </p>
+<p><%= render @product %></p>
 
 <% if current_user %>
 <h3>Reviews</h3>
