--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,26 +4,19 @@
 
 <p><%= render @product %></p>
 
+<div id="review-list">
 <% if current_user %>
 <h3>Reviews</h3>
-
 <p>Reviews for <%= @product.name %></p>
-	<% @product.reviews.each do |review| %>
-	<p>
-		<%= review.comment %>
-		<br>
-		<% if review.user != nil %>
-		<em>by <%= review.user.name %> </em>
-		Added on: <%= review.created_at %>
-		<% end %>
-	</p>
-	<% end %>
+	<div id="review-list">
+		<%= render :partial => "reviews" %>
+	</div>
 <% end %>
-
+</div>
 <% if current_user %>
 
 	<h4>New Review</h4>
-	<%= form_for([@product, @review]) do |f| %>
+	<%= form_for [@product, @review], :remote => true do |f| %>
 		<% if @review.errors.any? %>
 			<div id="error_explanation">
 				<h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -49,3 +42,14 @@
 	<p>Please <%= link_to "log in", new_session_path %> to add a review.</p>
 
 	<% end %>
+
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("#new_review")
+			.on('ajax:beforeSend', function() {alert("loading!");})
+			.on('ajax:success', function(data, status, xhr) {alert("success!");})
+			.on('ajax:error', function(xhr, status, error) {alert("error!");})
+			.on('ajax:')
+	})
+
+</script>
