--- a/app/views/reviews/create.js.erb
+++ b/app/views/reviews/create.js.erb
@@ -1,1 +1,7 @@
-$('#review-list').html("<%= j(render(:partial => 'products/reviews')) %>");
+<% if @review.errors.present? %>
+	$('#review-form-errors').html("<%= j(render(:partial => '/products/review_form_errors')) %>");
+<% else %>
+	$("#review-form-errors").html("");
+	$("#review-list").html("<%= j(render(:partial => '/products/reviews')) %>");
+	$("#new_review")[0].reset();
+<% end %>
