--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Rainforest</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<head>
+	  <title>Rainforest</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
+		<div id="main-container" class="container-fluid">
+			<div class="row">
+				<% if flash[:notice] %>
+					<p id="alert"> <%= flash[:notice] %> </p>
+				<% end %>
+				<% if flash[:alert] %>
+					<p id="alert"><%= flash[:alert] %></p>	
+				<% end %>
+			</div>
+		
+	<%= yield %>
 
-	<% if flash[:notice] %>
-		<p id="alert"> <%= flash[:notice] %> </p>
-	<% end %>
-	<% if flash[:alert] %>
-		<p id="alert"><%= flash[:alert] %></p>	
-	<% end %>
-	
-<%= yield %>
-
-<p class="userinfo">
-	<% if current_user %>
-	Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-	<% else %>
-	<%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-	<% end %>
-</p>
-
-</body>
+		<p class="userinfo">
+			<% if current_user %>
+			Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+			<% else %>
+			<%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+			<% end %>
+		</p>
+		</div>
+	</body>
 </html>
