--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,17 @@
 			</div>
 		
 			<%= yield %>
-
-			<p class="userinfo">
-				<% if current_user %>
-				Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-				<% else %>
-				<%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-				<% end %>
-			</p>
+			<div class="row">
+				<div class="col-lg-6 col-lg-offset-3">
+					<p class="userinfo">
+						<% if current_user %>
+						Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+						<% else %>
+						<%= link_to "Log in", new_session_path, :class => "btn btn-primary btn-xs"%> or <%= link_to "Sign up", new_user_path, :class => "btn btn-primary btn-xs" %>
+						<% end %>
+					</p>
+				</div>
+			</div>
 		</div><!-- container close -->
 	</body>
 </html>
