nav bar now fixed to the top of the page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,9 @@
-<h1>Products#index</h1>
+<!-- Row 2 -->
+<header class="row">
+	<div class="col-sm-6">
+		<h1>Products#index</h1>
+	</div>
+</header>
 
 <%= link_to "Add a new product", new_product_path, :class => "btn btn-default" %>
 
