--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 	</head>
 	<body>
 		<div id="main-container" class="container">
+			<!-- Row 1 -->
 			<div class="row">
-				<nav class="navbar navbar-default" role="navigation"> 
+				<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation"> 
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="collapse">
 							<span class="sr-only">Toggle Navigation</span>
@@ -20,8 +21,9 @@
 						</button>
 					</div>
 					<div class="collapse navbar-collapse" id="collapse">
-						<ul class="nav-pills nav-justified">
-							<li><a href="">Home</a></li>
+						<ul class="nav navbar-nav">
+							<li><a href="#">Home</a></li>
+							<li><%= link_to "Products", products_path %></li>
 						</ul>
 					</div>
 					
@@ -35,6 +37,8 @@
 					<% end %>
 		
 			<%= yield %>
+
+
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<p class="userinfo">
