--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 			<div class="row">
 				<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation"> 
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="collapse">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse">
 							<span class="sr-only">Toggle Navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
