moved most login and search functionality to the nav bar.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,13 +4,13 @@
 		<h1>Products#index</h1>
 	</div>
 </header>
+<!-- 
+<%# link_to "Add a new product", new_product_path, :class => "btn btn-default" %>
 
-<%= link_to "Add a new product", new_product_path, :class => "btn btn-default" %>
-
-<%= form_tag products_path, method: :get, authentication: false, id: 'search-form' do %>
-	<%= text_field_tag :search, params[:search] %>
-	<%= submit_tag "Search" %>
-<% end %>
+<%# form_tag products_path, method: :get, authentication: false, id: 'search-form' do %>
+	<%# text_field_tag :search, params[:search] %>
+	<%# submit_tag "Search" %>
+<%# end %> -->
 
 
 <div id="products">
