--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,27 @@
 					<div class="collapse navbar-collapse" id="collapse">
 						<ul class="nav navbar-nav">
 							<li><a href="#">Home</a></li>
-							<li><%= link_to "Products", products_path %></li>
+							<li class="dropdown">
+							 	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products <span class="caret"></span></a>
+							 		<ul class="dropdown-menu" role="menu">
+										<li><%= link_to "Products Index", products_path %></li>
+										<li><%= link_to "Add a new product", new_product_path %></li>
+									</ul>
+							</li>
 						</ul>
-					</div>
-					
+						<%= form_tag products_path, method: :get, authentication: false, id: 'search-form', :class => "navbar-form navbar-left" do %>
+						<div class="form-group">
+							<%= text_field_tag :search, params[:search], :class => "form-control", :placeholder => "Search" %>
+							<%= submit_tag "Search", :class => "btn btn-default" %>
+						<% end %>
+						</div>
+
+						<% if current_user %>
+						<p class="navbar-text navbar-right">Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete, :class => "btn btn-default btn-xs" %></p>
+						<% else %>
+						<%= link_to "Log in", new_session_path, :class => "btn btn-primary btn-xs"%> or <%= link_to "Sign up", new_user_path, :class => "btn btn-primary btn-xs" %>
+						<% end %>
+						
 				</nav>
 			</div>
 					<% if flash[:notice] %>
