--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,9 @@
 						</div>
 
 						<% if current_user %>
-						<p class="navbar-text navbar-right">Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete, :class => "btn btn-default btn-xs" %></p>
+						<p class="navbar-text navbar-right">Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete, :class => "btn btn-primary btn-sm" %></p>
 						<% else %>
-						<%= link_to "Log in", new_session_path, :class => "btn btn-primary btn-xs"%> or <%= link_to "Sign up", new_user_path, :class => "btn btn-primary btn-xs" %>
+						<p class="nav navbar-text navbar-right"><%= link_to "Log in", new_session_path, :class => "btn btn-primary btn-sm"%> or <%= link_to "Sign up", new_user_path, :class => "btn btn-primary btn-sm" %></p>
 						<% end %>
 						
 				</nav>
@@ -58,14 +58,7 @@
 
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<p class="userinfo">
-						<% if current_user %>
-						Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-						<% else %>
-						<%= link_to "Log in", new_session_path, :class => "btn btn-primary btn-xs"%> or <%= link_to "Sign up", new_user_path, :class => "btn btn-primary btn-xs" %>
-						<% end %>
-					</p>
-				</div>
+				
 			</div>
 		</div><!-- container close -->
 	</body>
