--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
 						<ul class="nav navbar-nav">
 							<li><a href="#">Home</a></li>
 							<li class="dropdown">
-							 	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products <span class="caret"></span></a>
-							 		<ul class="dropdown-menu" role="menu">
+							 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
+							 		<ul class="dropdown-menu">
 										<li><%= link_to "Products Index", products_path %></li>
 										<li><%= link_to "Add a new product", new_product_path %></li>
 									</ul>
@@ -46,13 +46,11 @@
 						
 				</nav>
 			</div>
-					<% if flash[:notice] %>
-						<p id="alert"> <%= flash[:notice] %> </p>
-					<% end %>
-					<% if flash[:alert] %>
-						<p id="alert"><%= flash[:alert] %></p>	
-					<% end %>
-		
+				<% flash.each do |key, value| %>
+  					<%= content_tag :div, value, class: "flash #{key}" %>
+				<% end %>
+
+				
 			<%= yield %>
 
 
