fixed weirdness on the navbar buttons

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -6,7 +6,6 @@ body {
 	padding-top: 70px;
 }
 
-p.nav.navbar-text.navbar-right,
-p.navbar-text.navbar-right {
-	padding-right: 1em;
+a.btn.btn-primary.navbar-btn.navbar-right {
+	margin-right: 1em;
 }
