--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 						</div>
 
 						<% if current_user %>
-						<p class="navbar-text navbar-right">Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete, :class => "btn btn-primary navbar-btn" %></p>
+						<%= link_to "Log out", session_path("current"), :method => :delete, :class => "btn btn-primary navbar-btn navbar-right" %> <p class="navbar-text navbar-right">Signed in as <%= current_user.name %>.  &nbsp;  </p>
 						<% else %>
 						<%= link_to "Log in", new_session_path, :class => "btn btn-primary navbar-btn navbar-right"%> &nbsp; <%= link_to "Sign up", new_user_path, :class => "btn btn-primary navbar-btn navbar-right" %> &nbsp;
 						<% end %>
