--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.sign-in-form {
+	max-width: 400px;
+	margin: 0 auto;
+	padding: 15px;
+	border: 1px solid #ddd;
+}
