--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,34 @@
-<h1>Users #new </h1>
-
-<h3>Sign up to the fucking Rain Forest.</h3>
-
-<%= form_for @user do |f| %>
-		<% if @user.errors.any? %>
-			<div class="error_messages">
-				<h2>Form is invalid</h2>
-				<ul>
-					<% for message in @user.errors.full_messages %>
-					<li><%= message %></li>
-					<% end %>
-				</ul>
-			</div>
-		<% end %>
-		<div class="field">
-			<%= f.label :name %><br />
-			<%= f.text_field :name %>
-		</div>
-		<div class="field">
-			<%= f.label :email %> <br />
-			<%= f.text_field :email %>
-		</div>
-		<div class="field">
-			<%= f.label :password %> <br />
-			<%= f.password_field :password %>
-		</div>
-		<div class="field">
-			<%= f.label :password_confirmation %> <br />
-			<%= f.password_field :password_confirmation %>
-		</div>
-		<div class="actions"><%= f.submit %></div>
-	<% end %>
+<div class="sign-in-container">
+	<div class="sign-in-form">
+		<%= form_for @user do |f| %>
+				<% if @user.errors.any? %>
+					<div class="error_messages">
+						<h2>Form is invalid</h2>
+						<ul>
+							<% for message in @user.errors.full_messages %>
+							<li><%= message %></li>
+							<% end %>
+						</ul>
+					</div>
+				<% end %>
+				<h1>Sign up</h1>
+				<div class="form-group">
+					<%= f.label :name %><br />
+					<%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+				</div>
+				<div class="form-group">
+					<%= f.label :email %> <br />
+					<%= f.text_field :email, class: "form-control", placeholder: "Email" %>
+				</div>
+				<div class="form-group">
+					<%= f.label :password %> <br />
+					<%= f.password_field :password %>
+				</div>
+				<div class="form-group">
+					<%= f.label :password_confirmation %> <br />
+					<%= f.password_field :password_confirmation %>
+				</div>
+				<div class="actions"><%= f.submit %></div>
+			<% end %>
+	</div>
+</div>
