--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,13 +22,13 @@
 				</div>
 				<div class="form-group">
 					<%= f.label :password %> <br />
-					<%= f.password_field :password %>
+					<%= f.password_field :password, :class => 'form-control', :placeholder => 'Password' %>
 				</div>
 				<div class="form-group">
 					<%= f.label :password_confirmation %> <br />
-					<%= f.password_field :password_confirmation %>
+					<%= f.password_field :password_confirmation, :class => 'form-control', :placeholder => 'Password confirmation' %>
 				</div>
-				<div class="actions"><%= f.submit %></div>
+				<div class="actions"><%= f.submit class: 'btn btn-primary btn-block' %></div>
 			<% end %>
 	</div>
 </div>
