--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 
+<div class="jumbotron">
 
+<h1>Name: <%= @user.name %></h1>
+</div>
 
-<%= @user.name %>
-
-<%= @user.email %>
+email: <%= @user.email %>
