dried up some code. created a partial for the user fields

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="sign-in-container">
 	<div class="sign-in-form">
-	<h1>Sign up</h1>
+		<h1>Edit User</h1>
 		<%= render 'form' %>
 	</div>
 </div>
