--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,6 @@
 <h1>Name: <%= @user.name %></h1>
 </div>
 
-email: <%= @user.email %>
+email: 	<%= @user.email %>
+
+<%= link_to "Edit", edit_user_path %>
