--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
 
-<div class="jumbotron">
-
-<h1>Name: <%= @user.name %></h1>
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h1>Name: <%= @user.name %></h1>
+	</div>
+	<div class="panel-body">
+	<p>email: 	<%= @user.email %>
+	</p>
+	<p><%= link_to "Edit", edit_user_path %></p>
+	</div>
 </div>
-
-email: 	<%= @user.email %>
-
-<%= link_to "Edit", edit_user_path %>
