working on bootstrap pagination and add product pages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 		<div class="panel-body">
 		<p>email: 	<%= @user.email %>
 		</p>
-		<p><%= link_to "Edit", edit_user_path %></p>
+		<p><%= link_to "Edit", edit_user_path, :class => 'btn btn-primary btn-block' %></p>
 		</div>
 	</div>
 </div>
