--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @product do |f| %>
+<%= form_for(@product, :html => { :class => "form-horizontal" }) do |f| %>
 
 	<% if @product.errors.any? %>
 		<div id="error_explanation">
@@ -12,15 +12,15 @@
 		</div>
 	<% end %>
 
-<p><%= f.label :Name %>
-<%= f.text_field "name" %></p>
+<div class="form-group"><p><%= f.label :Name %>
+<%= f.text_field "name" %></p></div>
 
 
-<p><%= f.label :Description %>
-<%= f.text_field "description" %></p>
+<div class="form-group"><p><%= f.label :Description %>
+<%= f.text_field "description" %></p></div>
 
-<%= f.label :Price %>
-<%= f.number_field "price_in_cents" %>
+<div class="form-group"><%= f.label :Price %>
+<%= f.number_field "price_in_cents" %></div>
 
 <p><%= f.submit "save" %></p>
 
