--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,16 +12,32 @@
 		</div>
 	<% end %>
 
-<div class="form-group"><p><%= f.label :Name %>
-<%= f.text_field "name" %></p></div>
+<div class="form-group">
+	<%= f.label :Name, class: 'col-sm-2 control-label' %>
+	<div class="col-sm-10">
+		<%= f.text_field "name", class: 'form-control' %>
+	</div>
+</div>
 
 
-<div class="form-group"><p><%= f.label :Description %>
-<%= f.text_field "description" %></p></div>
+<div class="form-group">
+	<%= f.label :Description, class: 'col-sm-2 control-label' %>
+	<div class="col-sm-10">
+		<%= f.text_field "description", class: 'form-control' %>
+	</div>
+</div>
 
-<div class="form-group"><%= f.label :Price %>
-<%= f.number_field "price_in_cents" %></div>
+<div class="form-group">
+	<%= f.label :Price, class: 'col-sm-2 control-label' %>
+	<div class="col-sm-10">
+		<%= f.number_field "price_in_cents", class: 'form-control' %>
+	</div>
+</div>
 
-<p><%= f.submit "save" %></p>
+<div class="form-group">
+	<div class="col-sm-offset-2 col-sm-10">
+		<%= f.submit class: "btn btn-default" %>
+	</div>
+</div>
 
 <% end %>
