bootstrap markup added for comments

--- a/app/views/products/_reviews.html.erb
+++ b/app/views/products/_reviews.html.erb
@@ -1,15 +1,11 @@
 <% @product.reviews.each do |review| %>
-	<hr />
-	<div class="review">
-		<p class="comment">
+	<div class="media">
+		<div class="media-body">
 			<%= review.comment %>
-		</p>
-		<div class="poster">
-			<% if review.user != nil %>
-			<em>by <%= review.user.name %> </em>
-			Added on: <%= review.created_at %>
-			<% end %>
+				<% if review.user != nil %>
+				<em>by <%= review.user.name %> </em>
+				Added on: <%= review.created_at.localtime %>
+				<% end %>
 		</div>
-		<br>
 	</div>
 <% end %>
