--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,6 +14,7 @@
 <% end %>
 </div>
 <% if current_user %>
+	<div class="well">
 		<h4>New Review</h4>
 		<%= form_for [@product, @review], :remote => true do |f| %>
 			<div id="review-form-errors">
@@ -48,3 +49,4 @@
 			});
 	});
 	</script>
+	</div>
