fixed some pagination issues and disabled infinite scrolling

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Products#edit</h1>
 
-<p><%= link_to "Back", products_path %></p>
+<ul class="pager">
+	<li class="previous"> <%= link_to "Back", products_path %></li>
+</ul>
 
 <h2>Edit the mofo product, Bitches.</h2>
 
