--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,10 @@
 	<%# submit_tag "Search" %>
 <%# end %> -->
 
-
+<div class="jumbotron">
+	<h1>Your featured product</h1>
+	<h2><%= link_to @featured.name, product_path(@featured.id)  %></h2>
+</div>
 <div id="products">
 
 	<%= render @products %>
