--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,6 +14,7 @@
 <div class="jumbotron">
 	<h1>Your featured product</h1>
 	<h2><%= link_to @featured.name, product_path(@featured.id)  %></h2>
+	<p><%= @featured.description %></p>
 </div>
 <div id="products">
 
