--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product, :html => { :class => "form-horizontal" }) do |f| %>
+<%= form_for(@product, :html => { :class => "form-horizontal", :multipart => true }) do |f| %>
 
 	<% if @product.errors.any? %>
 		<div id="error_explanation">
@@ -32,6 +32,11 @@
 	<div class="col-sm-10">
 		<%= f.number_field "price_in_cents", class: 'form-control' %>
 	</div>
+</div>
+
+<div class="form-group">
+	<%= f.file_field :picture %>
+
 </div>
 
 <div class="form-group">
