--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product, :html => { :class => "form-horizontal", :multipart => true }) do |f| %>
+<%= form_for(@product, :html => { :class => "form-horizontal" }) do |f| %>
 
 	<% if @product.errors.any? %>
 		<div id="error_explanation">
