--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,7 +7,11 @@
 		<%= formatted_price(product.price_in_cents) %>
 		<%= product.name %>
 	</h2>
+
+
 	<% end %>
 
 	<!-- Keeps the description to 100 characters or less -->
 	<p><%= truncate(product.description, length: 100) %></p>
+
+	<%= image_tag product.picture_url.to_s %>
