--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 					</div>
 					<div class="collapse navbar-collapse" id="collapse">
 						<ul class="nav navbar-nav">
-							<li><a href="#">Home</a></li>
+							<li><%= link_to "HOME", home_index_path %></li>
 							<li class="dropdown">
 							 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
 							 		<ul class="dropdown-menu">
