--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -35,8 +35,10 @@
 </div>
 
 <div class="form-group">
-	<%= f.file_field :picture %>
-
+	<%= f.label  :Upload, class: 'col-sm-2 control-label' %>
+	<div class="col-sm-10">
+		<%= f.file_field :picture, class: 'form-control' %>
+	</div>
 </div>
 
 <div class="form-group">
