--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -14,4 +14,4 @@
 	<!-- Keeps the description to 100 characters or less -->
 	<p><%= truncate(product.description, length: 100) %></p>
 
-	<%= image_tag product.picture_url.to_s %>
+	<%= image_tag product.picture.thumb.url %>
