--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -36,21 +36,18 @@
 
 <div class="form-group">
 	<%= f.label  :Upload, class: 'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		
-	</div>
-</div>
 
-<div class="fileinput fileinput-new" data-provides="fileinput">
-  <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;"></div>
-	<div>
-		<span class="btn btn-default btn-file">
-			<span class="fileinput-new">Select image</span>
-			<span class="fileinput-exists">Change</span>
-			<%= f.file_field :picture %>
-		</span>
-    <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
-  </div>
+	<div class="fileinput fileinput-new col-sm-10" data-provides="fileinput">
+	  <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;"></div>
+		<div>
+			<span class="btn btn-default btn-file">
+				<span class="fileinput-new">Select image</span>
+				<span class="fileinput-exists">Change</span>
+				<%= f.file_field :picture %>
+			</span>
+	    <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+	  </div>
+	</div>
 </div>
 
 <div class="form-group">
